--- a/project1.html
+++ b/project1.html
@@ -48,16 +48,20 @@
         </div>
 
         <div id="main">
-            <!-- Project starts -->
-
-            
-
-            <!-- Project ends -->
+            <div class="contentWrapper">
+                <div id="projectDiv1" class="section">
+                    <!-- Project starts -->
+                    <h4>Choose if you want to get a random quote or your (fictional) fortune told</h4>
+                    <input type="button" id="quoteButton" name="quoteButton" value="Get A Random Quote!" />
+                    <input type="button" id="fortuneButton" name="fortuneButton" value="Tell my fortune!" />
+                    <!-- Project ends -->
+                </div>
+            </div>
         </div>
 
         <div id="footer">
             <ul>
-                <li><a href="#top">Start</a></li>
+                <li><a href="index.html#top">Start</a></li>
                 <li><a href="#about">About Me</a></li>
                 <li><a href="#projects">My Projects</a></li>
                 <li><a href="#contact">Contact Me</a></li>
