--- a/project1.html
+++ b/project1.html
@@ -52,8 +52,10 @@
                 <div id="projectDiv1" class="section">
                     <!-- Project starts -->
                     <h4>Choose if you want to get a random quote or your (fictional) fortune told</h4>
-                    <input type="button" id="quoteButton" name="quoteButton" value="Get A Random Quote!" />
-                    <input type="button" id="fortuneButton" name="fortuneButton" value="Tell my fortune!" />
+                    <input type="button" id="quoteButton" name="quoteButton" value="Get A Random Quote!" /><br/>
+                    <input type="button" id="fortuneButton" name="fortuneButton" value="Tell my fortune!" /><br/>
+
+                    <div id="resultArea" class="resultBox"></div>
                     <!-- Project ends -->
                 </div>
             </div>
