--- a/project1.html
+++ b/project1.html
@@ -55,7 +55,9 @@
                     <input type="button" id="quoteButton" name="quoteButton" value="Get A Random Quote!" /><br/>
                     <input type="button" id="fortuneButton" name="fortuneButton" value="Tell my fortune!" /><br/>
 
-                    <div id="resultArea" class="resultBox"></div>
+                    <div id="resultArea" class="resultBox">
+                        <p id="quoteText"></p>
+                    </div>
                     <!-- Project ends -->
                 </div>
             </div>
