--- a/project1.html
+++ b/project1.html
@@ -33,9 +33,9 @@
                 <div id="navOuter">
                     <ul id="navInner">
                         <li><a href="./index.html#top">Start</a></li>
-                        <li><a href="#about">About Me</a></li>
-                        <li><a href="#projects">My Projects</a></li>
-                        <li><a href="#contact">Contact Me</a></li>
+                        <li><a href="./index.html#about">About Me</a></li>
+                        <li><a href="./index.html#projects">My Projects</a></li>
+                        <li><a href="./index.html#contact">Contact Me</a></li>
                     </ul>
                 </div>
                 <!-- Navigation ends -->
@@ -53,7 +53,7 @@
                     <!-- Project starts -->
                     <h3>Choose if you want to get a random quote or your (fictional) fortune told</h3>
                     <input type="button" id="quoteButton" name="quoteButton" value="Get A Random Quote!" /><br/>
-                    <input type="button" id="fortuneButton" name="fortuneButton" value="Tell my fortune!" /><br/>
+                    <input type="button" id="fortuneButton" name="fortuneButton" value="Tell My Fortune!" /><br/>
 
                     <div id="resultArea" class="resultBox">
                         <p id="quoteText"></p>
