--- a/project1.html
+++ b/project1.html
@@ -10,7 +10,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <!-- Meta ends -->
 
-        <title>Star Labs - Project 1</title>
+        <title>Star Labs - Project 1 - Quotes & Fortunes</title>
 
         <!-- Linked styles, fonts and head scripts starts -->
         <link rel="stylesheet" href="./css/style.css">
@@ -43,8 +43,8 @@
         </div>
 
         <div id="bannerProjectPage">
-            <h1>Placeholder Project Title</h1>
-            <h3>Placeholder Project Description</h3>
+            <h1>Quotes & Fortunes</h1>
+            <h3>Get a random quote of your fortune told</h3>
         </div>
 
         <div id="main">
