--- a/index.html
+++ b/index.html
@@ -66,8 +66,8 @@
                         <div class="projectContainer">
                             <div class="projectItem first">
                                 <i class="fa fa-cogs"></i>
-                                <h2>Project 1</h2>
-                                <p>Some placeholder description text for the project to let readers know some basic info about it. Some placeholder description text for the project to let readers know some basic info about it.</p>
+                                <h2>Quotes & Fortunes</h2>
+                                <p>Check out a random quote or get your fortune told! This project was the first one I did for this site. The project's purpose was to get practice with JavaScript and DOM manipulation.</p>
                                 <a href="./project1.html" class="projectButton">Read More</a>
                             </div>
                             <div class="projectItem second">
