--- a/project1.html
+++ b/project1.html
@@ -44,7 +44,7 @@
 
         <div id="bannerProjectPage">
             <h1>Quotes & Fortunes</h1>
-            <h3>Get a random quote of your fortune told</h3>
+            <h3>Get a random quote or your fortune told</h3>
         </div>
 
         <div id="main">
