--- a/project2.html
+++ b/project2.html
@@ -53,7 +53,29 @@
                     <!-- Project starts -->
                     <h3>JS Calculator</h3>
                     
-                    
+                    <div id="calcOuterContainer">
+                        <div id="calcInnerContainer">
+                            <div id="calcOutput"></div>
+                            <button id="calcBtnClear">Clear</button>
+                            <button id="calcBtnDel">DEL</button>
+                            <button id="calcBtnDivision">&divide;</button>
+                            <button id="calcBtnOne">1</button>
+                            <button id="calcBtnTwo">2</button>
+                            <button id="calcBtnThree">3</button>
+                            <button id="calcBtnMultiply">&times;</button>
+                            <button id="calcBtnFour">4</button>
+                            <button id="calcBtnFive">5</button>
+                            <button id="calcBtnSix">6</button>
+                            <button id="calcBtnPlus">&plus;</button>
+                            <button id="calcBtnSeven">7</button>
+                            <button id="calcBtnEight">8</button>
+                            <button id="calcBtnNine">9</button>
+                            <button id="calcBtnMinus">&minus;</button>
+                            <button id="calcBtnZero">0</button>
+                            <button id="calcBtnDot">.</button>
+                            <button id="calcBtnEquals">&equals;</button>
+                        </div>
+                    </div>
 
                     <!-- Project ends -->
                 </div>
