--- a/project2.html
+++ b/project2.html
@@ -55,7 +55,7 @@
                     
                     <div id="calcOuterContainer">
                         <div id="calcInnerContainer">
-                            <div id="calcOutput"></div>
+                            <input id="calcOutput" name="calcOutput" />
                             <button id="calcBtnClear">Clear</button>
                             <button id="calcBtnDel">DEL</button>
                             <button id="calcBtnDivision">&divide;</button>
