--- a/project2.html
+++ b/project2.html
@@ -55,7 +55,10 @@
                     
                     <div id="calcOuterContainer">
                         <div id="calcInnerContainer">
-                            <input id="calcOutput" name="calcOutput" />
+                            <div id="calcOutput">
+                                <input id="calcOutputField1" name="calcOutputField1" />
+                                <input id="calcOutputField2" name="calcOutputField2" />
+                            </div>
                             <button id="calcBtnClear">Clear</button>
                             <button id="calcBtnDel">DEL</button>
                             <button id="calcBtnDivision">&divide;</button>
