--- a/project2.html
+++ b/project2.html
@@ -56,8 +56,8 @@
                     <div id="calcOuterContainer">
                         <div id="calcInnerContainer">
                             <div id="calcOutput">
-                                <input id="calcOutputField1" name="calcOutputField1" />
-                                <input id="calcOutputField2" name="calcOutputField2" />
+                                <input id="calcOutputField1" name="calcOutputField1" value="" />
+                                <input id="calcOutputField2" name="calcOutputField2" value="" />
                             </div>
                             <button id="calcBtnClear">Clear</button>
                             <button id="calcBtnDel">DEL</button>
