--- a/project2.html
+++ b/project2.html
@@ -61,21 +61,21 @@
                             </div>
                             <button id="calcBtnClear">Clear</button>
                             <button id="calcBtnDel">DEL</button>
-                            <button id="calcBtnDivision">&divide;</button>
-                            <button id="calcBtnOne">1</button>
-                            <button id="calcBtnTwo">2</button>
-                            <button id="calcBtnThree">3</button>
-                            <button id="calcBtnMultiply">&times;</button>
-                            <button id="calcBtnFour">4</button>
-                            <button id="calcBtnFive">5</button>
-                            <button id="calcBtnSix">6</button>
-                            <button id="calcBtnPlus">&plus;</button>
-                            <button id="calcBtnSeven">7</button>
-                            <button id="calcBtnEight">8</button>
-                            <button id="calcBtnNine">9</button>
-                            <button id="calcBtnMinus">&minus;</button>
-                            <button id="calcBtnZero">0</button>
-                            <button id="calcBtnDot">.</button>
+                            <button id="calcBtnDivision" class="calcNumOperatorBtn" value="/">&divide;</button>
+                            <button id="calcBtnOne" class="calcNumOperatorBtn" value="1">1</button>
+                            <button id="calcBtnTwo" class="calcNumOperatorBtn" value="2">2</button>
+                            <button id="calcBtnThree" class="calcNumOperatorBtn" value="3">3</button>
+                            <button id="calcBtnMultiply" class="calcNumOperatorBtn" value="*">&times;</button>
+                            <button id="calcBtnFour" class="calcNumOperatorBtn" value="4">4</button>
+                            <button id="calcBtnFive" class="calcNumOperatorBtn" value="5">5</button>
+                            <button id="calcBtnSix" class="calcNumOperatorBtn" value="6">6</button>
+                            <button id="calcBtnPlus" class="calcNumOperatorBtn" value="+">&plus;</button>
+                            <button id="calcBtnSeven" class="calcNumOperatorBtn" value="7">7</button>
+                            <button id="calcBtnEight" class="calcNumOperatorBtn" value="8">8</button>
+                            <button id="calcBtnNine" class="calcNumOperatorBtn" value="9">9</button>
+                            <button id="calcBtnMinus" class="calcNumOperatorBtn"value="-">&minus;</button>
+                            <button id="calcBtnZero" class="calcNumOperatorBtn" value="0">0</button>
+                            <button id="calcBtnDot" class="calcNumOperatorBtn" value=".">.</button>
                             <button id="calcBtnEquals">&equals;</button>
                         </div>
                     </div>
